; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/provisioning/softap_prov/main/extr_app_main.c_wifi_init_sta.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/provisioning/softap_prov/main/extr_app_main.c_wifi_init_sta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WIFI_EVENT = common dso_local global i32 0, align 4
@ESP_EVENT_ANY_ID = common dso_local global i32 0, align 4
@event_handler = common dso_local global i32 0, align 4
@IP_EVENT = common dso_local global i32 0, align 4
@IP_EVENT_STA_GOT_IP = common dso_local global i32 0, align 4
@WIFI_MODE_STA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wifi_init_sta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wifi_init_sta() #0 {
  %1 = load i32, i32* @WIFI_EVENT, align 4
  %2 = load i32, i32* @ESP_EVENT_ANY_ID, align 4
  %3 = load i32, i32* @event_handler, align 4
  %4 = call i32 @esp_event_handler_register(i32 %1, i32 %2, i32 %3, i32* null)
  %5 = call i32 @ESP_ERROR_CHECK(i32 %4)
  %6 = load i32, i32* @IP_EVENT, align 4
  %7 = load i32, i32* @IP_EVENT_STA_GOT_IP, align 4
  %8 = load i32, i32* @event_handler, align 4
  %9 = call i32 @esp_event_handler_register(i32 %6, i32 %7, i32 %8, i32* null)
  %10 = call i32 @ESP_ERROR_CHECK(i32 %9)
  %11 = load i32, i32* @WIFI_MODE_STA, align 4
  %12 = call i32 @esp_wifi_set_mode(i32 %11)
  %13 = call i32 @ESP_ERROR_CHECK(i32 %12)
  %14 = call i32 (...) @esp_wifi_start()
  %15 = call i32 @ESP_ERROR_CHECK(i32 %14)
  ret void
}

declare dso_local i32 @ESP_ERROR_CHECK(i32) #1

declare dso_local i32 @esp_event_handler_register(i32, i32, i32, i32*) #1

declare dso_local i32 @esp_wifi_set_mode(i32) #1

declare dso_local i32 @esp_wifi_start(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
